@@ -43,7 +43,6 @@
 #include "pub_core_libcsetjmp.h"
 #include "pub_core_threadstate.h"
 #include "pub_core_gdbserver.h"
-#include "pub_core_aspacemgr.h"
 #include "pub_core_vki.h"
 #include "pub_core_clreq.h"
 
